--- a/pages/academics.html
+++ b/pages/academics.html
@@ -42,17 +42,19 @@
               
               <nav>
                   <h1>
+                      <!--
                 <ul class="nav masthead-nav">
                   <li><a href="./academics.html">academics</a></li>
                   <li><a href="./origami.html">origami</a></li>
                   <li><a href="#">files</a></li>
                 </ul>
+                    -->
                       </h1>
               </nav>
             </div>
           </div>
             
-          <div style="position: fixed; left: 40px; top: 20px"> <h1><a href="../index.html">corby rosset</a></h1></div>
+          <div style="position: fixed; left: 40px; top: 20px"> <h1><a href="../index.html">Under Construction</a></h1></div>
 
 
         </div>
