--- a/pages/index.html
+++ b/pages/index.html
@@ -55,6 +55,7 @@
           </div>
             
           <div style="position: fixed; left: 40px; top: 20px"> <h1><a href="../index.html">Under Construction</a></h1></div>
+          <div style="position: fixed; right: 80px; bottom: 40px"> <h4><a href="../index.html">(but here's a cool picture)</a></h4></div>
 
 
         </div>
