--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				<a href="item-1.html">
 					<div>
 						<h2>School</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur. Hi. Im Corby, an undergraduate CS major at Johns Hopkins, and this is my in-the-works website that I'll try to update. Hi. Im Corby, an undergraduate CS major at Johns Hopkins, and this is my in-the-works website that I'll try to update. Hi. Im Corby, an undergraduate CS major at Johns Hopkins, and this is my in-the-works website that I'll try to update.</p>
+						<p>Lorem ipsum dolor sit amet, consectetur.</p>
 						<b>View More</b>
 					</div>
 				</a>
@@ -111,4 +111,3 @@
 <script src="js/cbpAnimatedHeader.min.js"></script>
 </body>
 </html>
->>>>>>> 11c97f49a6632265f19d534eafb7c50f1892ba4c
