--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <link rel="stylesheet" type="text/css" href="css/component.css" />
 	<script src="js/modernizr.js"></script> <!-- Modernizr -->
   	
-	<title>3D Folding Panel</title>
+	<title>Corby Rosset</title></title>
 </head>
 <body>
     <!--fancy changing header -->
