--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				<a href="item-1.html">
 					<div>
 						<h2>School</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur.</p>
+						<p>What do I study?</p>
 						<b>View More</b>
 					</div>
 				</a>
@@ -64,7 +64,7 @@
 				<a href="item-2.html">
 					<div>
 						<h2>Summer</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur.</p>
+						<p>What do I do in my freetime?</p>
 						<b>View More</b>
 					</div>
 				</a>
@@ -74,8 +74,8 @@
 				<a class="dark-text" href="item-3.html">
 					<div>
 						<h2>Projects</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur.</p>
-						<b>View More</b>
+						<p>More to Come</p>
+						<b>Go!</b>
 					</div>
 				</a>
 			</li>
@@ -84,7 +84,7 @@
 				<a href="item-4.html">
 					<div>
 						<h2>Travel</h2>
-						<b>View More</b>
+						<b>View Pictures?</b>
 					</div>
 				</a>
 			</li>
