--- a/item-3.html
+++ b/item-3.html
@@ -11,7 +11,7 @@
 	<title>3D Folding Panel</title>
 </head>
 <body>
-	<div class="cd-fold-content single-page">
+	<div>
 		<h2>Title 3</h2>
 		<em>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse, laboriosam?</em>
 		<p>
@@ -25,7 +25,5 @@
 		</p>
 	</div>
 </body>
-<script src="js/jquery-2.1.1.js"></script>
-<script src="js/main.js"></script> <!-- Resource jQuery -->
 </body>
 </html>
