--- a/item-1.html
+++ b/item-1.html
@@ -6,12 +6,11 @@
 
 	<link rel="stylesheet" href="css/reset.css"> <!-- CSS reset -->
 	<link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
-	<script src="js/modernizr.js"></script> <!-- Modernizr -->
   	
 	<title>3D Folding Panel</title>
 </head>
 <body>
-	<div class="cd-fold-content single-page">
+	<div>
 		<h2>Title 1</h2>
 		<em>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse, laboriosam?</em>
 		<p>
@@ -25,7 +24,5 @@
 		</p>
 	</div>
 </body>
-<script src="js/jquery-2.1.1.js"></script>
-<script src="js/main.js"></script> <!-- Resource jQuery -->
 </body>
 </html>
