--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
     
 	<main class="cd-main">
         <div class="centered">
-            <p class="title">Hi. I'm Corby, an undergraduate Computer Science and Applied Mathematics major at Johns Hopkins, and this is my new website
-                    that is very much in-the-works.</p>
+            <p class="title">Hi. I'm Corby, an undergraduate Computer Science and Applied Mathematics major at Johns Hopkins, and this is my new website! (very much in-the-works)</p>
             </div>
             
 		<header>
