--- a/item-2.html
+++ b/item-2.html
@@ -9,7 +9,7 @@
   	
 	<title>3D Folding Panel</title>
 </head>
-<body>
+<body style="background-color:#5BC3C8">
 	<div>
 		<h2>Title 2</h2>
 		<em>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse, laboriosam?</em>
