--- a/item-4.html
+++ b/item-4.html
@@ -6,7 +6,7 @@
 
 	<link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
 </head>
-<body>
+<body style="background-color:#90D0A0">
 	<div>
 		<h2>Title 4</h2>
 		<em>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse, laboriosam?</em>
