--- a/item-5.html
+++ b/item-5.html
@@ -6,7 +6,7 @@
 
 	<link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
 </head>
-<body>
+<body style="background-color:#7B89DB">
 	<div>
 		<h2>Title 5</h2>
 		<em>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse, laboriosam?</em>
