--- a/item-1.html
+++ b/item-1.html
@@ -8,7 +8,7 @@
   	
 	<title>3D Folding Panel</title>
 </head>
-<body>
+<body style="background-color:#619DE5">
 	<div>
 		<h2>Title 1</h2>
 		<em>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse, laboriosam?</em>
