--- a/item-3.html
+++ b/item-3.html
@@ -6,7 +6,7 @@
 
 	<link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
 </head>
-<body style="background-color:#337C99">>
+<body style="background-color:#337C99">
 	<div>
 		<h2>Title 3</h2>
 		<em>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse, laboriosam?</em>
