--- a/item-6.html
+++ b/item-6.html
@@ -17,8 +17,8 @@
 						<li class="grid-sizer"></li><!-- for Masonry column width -->
 						<li>
 							<figure>
-								<images src="images/thumb/1.png" alt="img01"/>
-								<figcaption><h3>Letterpress asymmetrical</h3><p>Chillwave hoodie ea gentrify aute sriracha consequat.</p></figcaption>
+                                <img src="./images/gifs/right.gif" loop=true>
+								<figcaption><h3>K-means Clustering</h3><p>One of my favorite animations, thanks to <href>http://shabal.in/</href></p></figcaption>
 							</figure>
 						</li>
 						<li>
