--- a/item-6.html
+++ b/item-6.html
@@ -15,16 +15,17 @@
 				<section class="grid-wrap">
 					<ul class="grid">
 						<li class="grid-sizer"></li><!-- for Masonry column width -->
-						<li>
+						<li> 
 							<figure>
-                                <img src="./images/gifs/right.gif" loop=true>
+                                <a href="http://shabal.in/visuals.html"><img src="./images/gifs/right.gif"></a>
 								<figcaption><h3>K-means Clustering</h3><p>One of my favorite animations, thanks to <href>http://shabal.in/</href></p></figcaption>
 							</figure>
+                            
 						</li>
 						<li>
 							<figure>
-								<img src="images/thumb/2.png" alt="img02"/>
-								<figcaption><h3>Vice velit chia</h3><p>Laborum tattooed iPhone, Schlitz irure nulla Tonx retro 90's chia cardigan quis asymmetrical paleo. </p></figcaption>
+								<a href="https://www.kaggle.com/"><img src="images/thumb/kaggle.png" alt="img02"/></a>
+								<figcaption><h3>Kaggle</h3><p>Machine Learning Challenges for Education, Research, and Industry</p></figcaption>
 							</figure>
 						</li>
 						<li>
