--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 		<ul class="cd-gallery">
 			<li class="cd-item">
-				<a class="dark-text" href="item-1.html">
+				<a class="dark-text" href="item-6.html">
 					<div>
 						<h2>School</h2>
 						<p>What do I study?</p>
@@ -51,7 +51,7 @@
 			</li>
 
 			<li class="cd-item">
-				<a class="dark-text" href="item-2.html">
+				<a class="dark-text" href="item-6.html">
 					<div>
 						<h2>ML resources</h2>
 						<p>Cool Stuff</p>
@@ -61,7 +61,7 @@
 			</li>
 
 			<li class="cd-item">
-				<a class="dark-text" href="item-3.html">
+				<a class="dark-text" href="item-6.html">
 					<div>
 						<h2>Projects</h2>
 						<p>More to Come</p>
@@ -71,7 +71,7 @@
 			</li>
 
 			<li class="cd-item">
-				<a class="dark-text" href="item-4.html">
+				<a class="dark-text" href="item-6.html">
 					<div>
 						<h2>Just Coding Things</h2>
 						<b>Anyone?</b>
@@ -81,7 +81,7 @@
             <!-- 5 and 6 -->
 
             <li class="cd-item">
-				<a class="dark-text" href="item-5.html">
+				<a class="dark-text" href="item-6.html">
 					<div>
 						<h2>Travel</h2>
                         <p>and hobbies</p>
@@ -93,8 +93,8 @@
             <li class="cd-item">
 				<a class="dark-text" href="item-6.html">
 					<div>
-						<h2>Summer!</h2>
-						<b>View Pictures?</b>
+						<h2>Summer and Random Things</h2>
+						<b>Accumulation of cool links</b>
 					</div>
 				</a>
 			</li>
