--- a/item-6.html
+++ b/item-6.html
@@ -17,8 +17,15 @@
 						<li class="grid-sizer"></li><!-- for Masonry column width -->
 						<li> 
 							<figure>
+                                <a href="http://www.starwars.com/films/star-wars-episode-vii-the-force-awakens"><img src="./images/thumb/starWars.jpeg"></a>
+								<figcaption><h3>Star Wars</h3><p>Can't Wait for Episode VII</href></p></figcaption>
+							</figure>
+                            
+						</li>
+                        <li> 
+							<figure>
                                 <a href="http://shabal.in/visuals.html"><img src="./images/gifs/right.gif"></a>
-								<figcaption><h3>K-means Clustering</h3><p>One of my favorite animations, thanks to <href>http://shabal.in/</href></p></figcaption>
+								<figcaption><h3>K-means Clustering</h3><p>One of my favorite animations</p></figcaption>
 							</figure>
                             
 						</li>
