--- a/item-6.html
+++ b/item-6.html
@@ -77,6 +77,12 @@
 								<figcaption><h3>SVM central</h3><p>Books, Reviews, Software, etc for SVM Algorithms</p></figcaption>
 							</figure>
 						</li>
+                        <li>
+							<figure>
+								<a href="https://en.wikipedia.org/wiki/Uncanny_valley"><img src="images/thumb/uncanncy.jpg"/></a>
+								<figcaption><h3>Uncanny Valley</h3><p>"The existence of artificial but humanlike entities elicits an innate fear of death"</p></figcaption>
+							</figure>
+						</li>
 						<li>
 							<figure>
 								<a href="http://research.microsoft.com/pubs/68391/smo-book.pdf"><img src="images/thumb/Platt.png" alt="img04"/></a>
