--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <!-- 5 and 6 -->
 
             <li class="cd-item">
-				<a class="dark-text" href="item-6.html">
+				<a class="dark-text" href="https://goo.gl/photos/eqSxwjWWtwjuq5hW8">
 					<div>
 						<h2>Travel</h2>
                         <p>and hobbies</p>
