--- a/item-6.html
+++ b/item-6.html
@@ -109,6 +109,12 @@
 						</li>
 						<li>
 							<figure>
+								<a href="http://www.dni.gov/files/documents/Global%20Trends_2015%20Report.pdf"><img src="images/thumb/CIA.png"/></a>
+								<figcaption><h3>Global Trends 2015</h3><p>CIA's predictions about what the world would be like this year</p></figcaption>
+							</figure>
+						</li>
+                        <li>
+							<figure>
 								<a href="http://www.cs.cmu.edu/~guyb/realworld.html"><img src="images/thumb/graph.png"/></a>
 								<figcaption><h3>Algorithms</h3><p>CMU Algorithms in the Real World Course</p></figcaption>
 							</figure>
