--- a/item-6.html
+++ b/item-6.html
@@ -29,6 +29,13 @@
 							</figure>
                             
 						</li>
+            
+                        <li>
+							<figure>
+								<a href="http://zhumusic.com/"><img src="images/thumb/zhu.png"/></a>
+								<figcaption><h3>ZHU</h3><p>One of My Favorite Artists</p></figcaption>
+							</figure>
+						</li>
 						<li>
 							<figure>
 								<a href="https://www.kaggle.com/"><img src="images/thumb/kaggle.png" alt="img02"/></a>
