--- a/item-6.html
+++ b/item-6.html
@@ -36,7 +36,14 @@
 								<figcaption><h3>ZHU</h3><p>One of My Favorite Artists</p></figcaption>
 							</figure>
 						</li>
-						<li>
+				
+                        <li>
+							<figure>
+								<a href="http://www.studioghibli.com.au/"><img src="images/thumb/totoro.jpg"/></a>
+								<figcaption><h3>Studio Ghibli</h3><p>My Favorite Movies, Next to Star Wars</p></figcaption>
+							</figure>
+						</li>
+                        <li>
 							<figure>
 								<a href="https://www.kaggle.com/"><img src="images/thumb/kaggle.png" alt="img02"/></a>
 								<figcaption><h3>Kaggle</h3><p>Machine Learning Challenges for Education, Research, and Industry</p></figcaption>
@@ -167,6 +174,12 @@
 							<figure>
 								<a href="https://www.haskell.org/"><img src="images/thumb/haskell.jpg"/></a>
 								<figcaption><h3>Haskell Language</h3><p>Also on my ToDo List</p></figcaption>
+							</figure>
+						</li>
+                        <li>
+							<figure>
+								<a href="https://www.mturk.com/mturk/welcome"><img src="images/thumb/turk.jpg"/></a>
+								<figcaption><h3>Hire Data Labelers</h3><p>If you're desperate</p></figcaption>
 							</figure>
 						</li>
 						
