--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <li class="cd-item">
 				<a class="dark-text" href="item-6.html">
 					<div>
-						<h2>Summer and Random Things</h2>
+						<h2>Interests</h2>
 						<b>Accumulation of cool links</b>
 					</div>
 				</a>
