--- a/item-6.html
+++ b/item-6.html
@@ -127,6 +127,13 @@
 								<figcaption><h3>Global Trends 2015</h3><p>CIA's predictions about what the world would be like this year</p></figcaption>
 							</figure>
 						</li>
+    
+                        <li>
+							<figure>
+								<a href="http://yearsandyearsofficial.com/"><img src="images/thumb/years.jpg"/></a>
+								<figcaption><h3>Years and Years</h3><p>I should make a favorite music page...</p></figcaption>
+							</figure>
+						</li>
                         <li>
 							<figure>
 								<a href="http://www.cs.cmu.edu/~guyb/realworld.html"><img src="images/thumb/graph.png"/></a>
