--- a/item-6.html
+++ b/item-6.html
@@ -160,8 +160,8 @@
 						</li>
 						<li>
 							<figure>
-								<a href="http://dita.com/intelligente"><img src="images/thumb/dita.jpg"/></a>
-								<figcaption><h3>I want new glasses :)</h3></figcaption>
+								<a href="http://www.renemagritte.org/rene-magritte-paintings.jsp"><img src="images/thumb/magritte.jpg"/></a>
+								<figcaption><h3>Magritte</h3></figcaption>
 							</figure>
 						</li>
 						<li>
@@ -170,14 +170,27 @@
 								<figcaption><h3>Twilio</h3><p>SMS Communications API</p></figcaption>
 							</figure>
 						</li>
-						<li>
+
+                        <li>
+							<figure>
+								<a href="https://en.wikipedia.org/wiki/Fortune%27s_algorithm"><img src="images/thumb/voronoi.png"/></a>
+								<figcaption><h3>Voronoi Diagrams</h3><p>output of both K-means clustering and Fortune's algorithm</p></figcaption>
+							</figure>
+						</li>
 						<li>
 							<figure>
 								<a href="http://julialang.org/"><img src="images/thumb/julia.png"/></a>
 								<figcaption><h3>Julia Language</h3><p>On my ToDo List</p></figcaption>
 							</figure>
 						</li>
+    
 						<li>
+							<figure>
+								<a href="http://www.katsushikahokusai.org/the-complete-works-1-96-3-0.html"><img src="images/thumb/hokusai.jpg"/></a>
+								<figcaption><h3>Katsushika Hokusai </h3><p>Dawn of Impressionism in Europe began in Japan?</p></figcaption>
+							</figure>
+						</li>
+                        <li>
 							<figure>
 								<a href="https://www.haskell.org/"><img src="images/thumb/haskell.jpg"/></a>
 								<figcaption><h3>Haskell Language</h3><p>Also on my ToDo List</p></figcaption>
