--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				<a class="dark-text" href="item-6.html">
 					<div>
 						<h2>School</h2>
-						<p>What do I study?</p>
+						<p>Under Construction<!--What do I study?--></p>
 						<b>View More</b>
 					</div>
 				</a>
@@ -54,7 +54,7 @@
 				<a class="dark-text" href="item-6.html">
 					<div>
 						<h2>ML resources</h2>
-						<p>Cool Stuff</p>
+						<p>Under Construction<!--Cool Stuff--></p>
 						<b>Take a Peak</b>
 					</div>
 				</a>
@@ -64,7 +64,7 @@
 				<a class="dark-text" href="item-6.html">
 					<div>
 						<h2>Projects</h2>
-						<p>More to Come</p>
+						<p>Under Construction<!--More to Come--></p>
 						<b>Go!</b>
 					</div>
 				</a>
@@ -73,7 +73,7 @@
 			<li class="cd-item">
 				<a class="dark-text" href="item-6.html">
 					<div>
-						<h2>Just Coding Things</h2>
+						<h2>Under Construction<!--Just Coding Things--></h2>
 						<b>Anyone?</b>
 					</div>
 				</a>
@@ -83,8 +83,8 @@
             <li class="cd-item">
 				<a class="dark-text" href="https://goo.gl/photos/eqSxwjWWtwjuq5hW8">
 					<div>
-						<h2>Travel</h2>
-                        <p>and hobbies</p>
+						<h2>Photos</h2>
+<!--                        <p>and hobbies</p>-->
 						<b>Food and Fun</b>
 					</div>
 				</a>
