--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" type="text/css" href="css/default.css" />
     <link rel="stylesheet" type="text/css" href="css/component.css" />
     <link rel="stylesheet" href="css/footer-distributed-with-contact-form.css">
+    <link href="css/hover.css" rel="stylesheet" media="all">
+
 	<script src="js/modernizr.js"></script> <!-- Modernizr -->
   	
 	<title>Corby Rosset</title></title>
@@ -41,19 +43,19 @@
 
 		<ul class="cd-gallery">
 			<li class="cd-item">
-				<a class="dark-text" href="item-6.html">
+				<a class="dark-text" href="item-1.html">
 					<div>
 						<h2>School</h2>
-						<p>Under Construction<!--What do I study?--></p>
+						<p>Projects<!--What do I study?--></p>
 						<b>View More</b>
 					</div>
 				</a>
 			</li>
 
 			<li class="cd-item">
-				<a class="dark-text" href="item-6.html">
+				<a class="dark-text" href="item-2.html">
 					<div>
-						<h2>ML resources</h2>
+						<h2>Academic Resources</h2>
 						<p>Under Construction<!--Cool Stuff--></p>
 						<b>Take a Peak</b>
 					</div>
@@ -61,9 +63,9 @@
 			</li>
 
 			<li class="cd-item">
-				<a class="dark-text" href="item-6.html">
+				<a class="dark-text" href="item-3.html">
 					<div>
-						<h2>Projects</h2>
+						<h2>Personal Projects</h2>
 						<p>Under Construction<!--More to Come--></p>
 						<b>Go!</b>
 					</div>
@@ -71,10 +73,9 @@
 			</li>
 
 			<li class="cd-item">
-				<a class="dark-text" href="item-6.html">
+				<a class="dark-text" href="item-4.html">
 					<div>
-						<h2>Under Construction<!--Just Coding Things--></h2>
-						<b>Anyone?</b>
+						<h2>Work Experience<!--Just Coding Things--></h2>
 					</div>
 				</a>
 			</li>
@@ -137,10 +138,10 @@
                 
 <!--                <a href="http://www.linkedin.com/in/corbyrosset" target="_blank" style="background-image:url(./images/linkedin.png);">hell</a>-->
                 <div class="footer-icons">
-                    <a href="https://www.google.com/maps?ll=40.730848,-73.987775&z=15&t=m&hl=en-US&gl=US&mapclient=embed">Good Eats</a>
-                    <a href="mailto:crosset2@jhu.edu">Email</a>
-                    <a href="https://github.com/corbyrosset">Github</a>
-                    <a href="http://www.linkedin.com/in/corbyrosset">LinkedIn</a>
+                    <a href="https://www.google.com/maps?ll=40.730848,-73.987775&z=15&t=m&hl=en-US&gl=US&mapclient=embed" class="hvr-sweep-to-left">Good Eats</a>
+                    <a href="mailto:crosset2@jhu.edu" class="hvr-sweep-to-left">Email</a>
+                    <a href="https://github.com/corbyrosset" class="hvr-sweep-to-left">Github</a>
+                    <a href="http://www.linkedin.com/in/corbyrosset" class="hvr-sweep-to-left">LinkedIn</a>
                 </div>
 			</div>
 
