--- a/item-3.html
+++ b/item-3.html
@@ -19,7 +19,7 @@
 </head>
     
 
-<body style="background-color:#337C99; padding-top:70px; margin: 50px 0; font-family:Open Sans, sans-serif;">
+<body style="background-color:#7B89DB; padding-top:70px; margin: 50px 0; font-family:Open Sans, sans-serif;">
 
     <!-- Page Content -->
     <div class="container">
@@ -136,10 +136,10 @@
 			<div class="footer-left">
 				<p class="footer-company-name">Corby Rosset</p>
                 <div class="footer-icons">
-                    <a href="https://www.google.com/maps?ll=40.730848,-73.987775&z=15&t=m&hl=en-US&gl=US&mapclient=embed" class="hvr-sweep-to-left"  style="background-color:#337C99;">Good Eats</a>
-                    <a href="mailto:crosset2@jhu.edu" class="hvr-sweep-to-left" style="background-color:#337C99;">Email</a>
-                    <a href="https://github.com/corbyrosset" class="hvr-sweep-to-left" style="background-color:#337C99;">Github</a>
-                    <a href="http://www.linkedin.com/in/corbyrosset" class="hvr-sweep-to-left" style="background-color:#337C99;">LinkedIn</a>
+                    <a href="https://www.google.com/maps?ll=40.730848,-73.987775&z=15&t=m&hl=en-US&gl=US&mapclient=embed" class="hvr-sweep-to-left"  style="background-color:#7B89DB;">Good Eats</a>
+                    <a href="mailto:crosset2@jhu.edu" class="hvr-sweep-to-left" style="background-color:#7B89DB;">Email</a>
+                    <a href="https://github.com/corbyrosset" class="hvr-sweep-to-left" style="background-color:#7B89DB;">Github</a>
+                    <a href="http://www.linkedin.com/in/corbyrosset" class="hvr-sweep-to-left" style="background-color:#7B89DB;">LinkedIn</a>
                 </div>
 			</div>
 		</footer>
