--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
 				<a class="dark-text" href="item-1.html">
 					<div>
 						<h2>School</h2>
-						<p>Projects<!--What do I study?--></p>
+<!--
+						<p>ProjectsWhat do I study?</p>
+-->
 						<b>View More</b>
 					</div>
 				</a>
@@ -66,7 +68,6 @@
 				<a class="dark-text" href="item-3.html">
 					<div>
 						<h2>Personal Projects</h2>
-						<p>Under Construction<!--More to Come--></p>
 						<b>Go!</b>
 					</div>
 				</a>
@@ -76,6 +77,8 @@
 				<a class="dark-text" href="item-4.html">
 					<div>
 						<h2>Work Experience<!--Just Coding Things--></h2>
+                        <p>Under Construction<!--Cool Stuff--></p>
+
 					</div>
 				</a>
 			</li>
@@ -85,7 +88,6 @@
 				<a class="dark-text" href="https://goo.gl/photos/eqSxwjWWtwjuq5hW8">
 					<div>
 						<h2>Photos</h2>
-<!--                        <p>and hobbies</p>-->
 						<b>Food and Fun</b>
 					</div>
 				</a>
