--- a/item-1.html
+++ b/item-1.html
@@ -31,8 +31,7 @@
         <!-- Page Heading -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">School
-                    <small>Notable Projects and Assignments</small>
+                <h1 class="page-header">School Projects and Notable Assignments</small>
                 </h1>
             </div>
         </div>
@@ -46,15 +45,14 @@
                 </a>
             </div>
             <div class="col-md-6 hvr-sweep-to-left">
-                <h3>Project One</h3>
-                <h4>Subheading</h4>
+                <h3>Reinforcement Learning: A Comparison of Value Iteration and Q-learning Algorithms in a Markov Decision Process</h3>
+                <h4>Two Different Reinforcement Learning Algorithms Applied to a Racing Game</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
-<!--
-                <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
--->
+                
             </div>
+            <a class="btn btn-primary hvr-sweep-to-left" href="files/reinforcement.pdf">Read the Paper</a>
+            <a class="btn btn-primary hvr-sweep-to-left" href="https://github.com/corbyrosset/Algorithms/tree/master/ReinforcementLearning">Get the Code</a>
         </div>
-        <!-- /.row -->
 
         <hr>
 
@@ -66,19 +64,16 @@
                 </a>
             </div>
             <div class="col-md-6 hvr-sweep-to-left">
-                <h3>Project Two</h3>
-                <h4>Subheading</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, odit velit cumque vero doloremque repellendus distinctio maiores rem expedita a nam vitae modi quidem similique ducimus! Velit, esse totam tempore.</p>
-<!--
-                <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
--->
+                <h3>Decision Trees: A Comparison of Genetic and Information-Theoretic Classification Trees</h3>
+                <h4>A paper comparing some decision tree learning algorithms on UCI data sets.</h4>
+                <p></p>
             </div>
+            <a class="btn btn-primary hvr-sweep-to-left" href="files/decision.pdf">Read the Paper</a>
+            <a class="btn btn-primary hvr-sweep-to-left" href="https://github.com/corbyrosset/Algorithms/tree/master/ClassicalDecisionTrees">Get the Code</a>
         </div>
-        <!-- /.row -->
 
         <hr>
 
-        <!-- Project Three -->
         <div class="row">
             <div class="col-md-5">
                 <a href="#">
@@ -86,13 +81,16 @@
                 </a>
             </div>
             <div class="col-md-6 hvr-sweep-to-left">
-                <h3>Project Three</h3>
-                <h4>Subheading</h4>
+                <h3>Respirage: A Respiratory Rate Measurement Device for Emergency Department Triage</h3>
+                <h4>My design team's final report summarizing our prototype's design and testing results.</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, temporibus, dolores, at, praesentium ut unde repudiandae voluptatum sit ab debitis suscipit fugiat natus velit excepturi amet commodi deleniti alias possimus!</p>
 <!--
                 <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
 -->
             </div>
+            <a class="btn btn-primary hvr-sweep-to-left" href="files/RRDT7.pdf">Read the Paper</a>
+            <a class="btn btn-primary hvr-sweep-to-left" href="files/RRDT7presentation.pptx">View Presentation</a>
+            <a class="btn btn-primary hvr-sweep-to-left" href="http://pages.jh.edu/~bpc/Medical%20Technology%20Undergraduate%20Track%20Finalists.html">Emsol Health</a>
         </div>
         <!-- /.row -->
 
@@ -107,13 +105,11 @@
                 </a>
             </div>
             <div class="col-md-6 hvr-sweep-to-left">
-                <h3>Project Four</h3>
-                <h4>Subheading</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, quidem, consectetur, officia rem officiis illum aliquam perspiciatis aspernatur quod modi hic nemo qui soluta aut eius fugit quam in suscipit?</p>
-<!--
-                <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
--->
+                <h3>MATLAB Simulation of SIR Model for Infectious Disease</h3>
+                <p>Final project for Biomedical Modeling and Design class at JHU comprising of a poster presentation discussing the results of our MATLAB simulation of the spread of contagious diseases using random matrices. We placed "highest honors" for the project out of our freshman class.</p>
             </div>
+            <a class="btn btn-primary hvr-sweep-to-left" href="files/ModelInfectiousDisease.pdf">View the Presentation</a>
+
         </div>
         <!-- /.row -->
 
@@ -123,17 +119,16 @@
         <div class="row">
             <div class="col-md-5">
                 <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/300x400" alt="">
+                    <img class="img-responsive" src="images/large/molesniffer.jpg" alt="">
                 </a>
             </div>
             <div class="col-md-6 hvr-sweep-to-left">
-                <h3>Project Five</h3>
-                <h4>Subheading</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, quo, minima, inventore voluptatum saepe quos nostrum provident ex quisquam hic odio repellendus atque porro distinctio quae id laboriosam facilis dolorum.</p>
-<!--
-                <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
--->
+                <h3>MoleSniffer</h3>
+                <h4>Cancer Diagnostics Mobile App</h4>
+                <p>At the 2014 HopHacks (JHU hackathon) competition,  we developed an Android app to detect early stages of melanoma via computer vision algorithms. We placed 3rd overall, and were winners of the JHU Social Innovation Lab’s Award for the greatest impact on society, for which we were offered a spot in their startup incubator and seed funding.</p>
             </div>
+            <a class="btn btn-primary hvr-sweep-to-left" href="http://challengepost.com/software/mole-sniffer">View Submission</a>
+
         </div>
 
         <footer class="footer-distributed" style="background-color: #f6f6f6; margin-top:20px ">
