--- a/item-3.html
+++ b/item-3.html
@@ -27,9 +27,7 @@
         <!-- Page Heading -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">School
-                    <small>Notable Projects and Assignments</small>
-                </h1>
+                <h1 class="page-header">Personal Projects and Research</h1>
             </div>
         </div>
         <!-- /.row -->
@@ -42,13 +40,11 @@
                 </a>
             </div>
             <div class="col-md-6 hvr-sweep-to-left">
-                <h3>Project One</h3>
-                <h4>Subheading</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
-<!--
-                <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
--->
+                <h3>Literature Review of Online Decision Tree Classification Algorithms</h3>
+                <h4>Independent Research</h4>
+                <p>This paper summarizes the most impactful literature of online decision tree (ODT) algorithms. These classification algorithms are designed to handle extremely large datasets that grow everyday. I will implement and test some or all of these algorithms.</p>
             </div>
+            <a class="btn btn-primary hvr-sweep-to-left" href="files/OnlineDecisionTreeReview.pdf">Read the Paper</a>
         </div>
         <!-- /.row -->
 
@@ -62,39 +58,20 @@
                 </a>
             </div>
             <div class="col-md-6 hvr-sweep-to-left">
-                <h3>Project Two</h3>
-                <h4>Subheading</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, odit velit cumque vero doloremque repellendus distinctio maiores rem expedita a nam vitae modi quidem similique ducimus! Velit, esse totam tempore.</p>
-<!--
-                <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
--->
+                <h3>Random Forests</h3>
+                <h4>Classification by Majority Vote of a Forest of Decision Trees</h4>
+                <p>Some code I threw together over a weekend based on Leo Breiman's paper discussing variance reduction for classical information-theoretic decision trees. The solution is basically to average out the classification of many partially-trained trees.</p>
             </div>
+            <a class="btn btn-primary hvr-sweep-to-left" href="files/RandomForests.pdf">Read the Paper</a>
+            <a class="btn btn-primary hvr-sweep-to-left" href="https://github.com/corbyrosset/Algorithms/tree/master/RandomForests">Get the Code</a>
+
+
+            
         </div>
         <!-- /.row -->
 
         <hr>
 
-        <!-- Project Three -->
-        <div class="row">
-            <div class="col-md-5">
-                <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/300x400" alt="">
-                </a>
-            </div>
-            <div class="col-md-6 hvr-sweep-to-left">
-                <h3>Project Three</h3>
-                <h4>Subheading</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, temporibus, dolores, at, praesentium ut unde repudiandae voluptatum sit ab debitis suscipit fugiat natus velit excepturi amet commodi deleniti alias possimus!</p>
-<!--
-                <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
--->
-            </div>
-        </div>
-        <!-- /.row -->
-
-        <hr>
-
-        <!-- Project Four -->
         <div class="row">
 
             <div class="col-md-5">
@@ -103,19 +80,34 @@
                 </a>
             </div>
             <div class="col-md-6 hvr-sweep-to-left">
-                <h3>Project Four</h3>
-                <h4>Subheading</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, quidem, consectetur, officia rem officiis illum aliquam perspiciatis aspernatur quod modi hic nemo qui soluta aut eius fugit quam in suscipit?</p>
-<!--
-                <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
--->
+                <h3>Effects of Abrasion on Chlorophyll Fluorescence</h3>
+                <h4>Year long high school research project with the late Dr. Robert Clegg.</h4>
+                <p></p>
             </div>
+            <a class="btn btn-primary hvr-sweep-to-left" href="files/ChlorophyllFluorescence.pdf">Read the Paper</a>
+
         </div>
-        <!-- /.row -->
+        
+        <hr>
+        <div class="row">
+            <div class="col-md-5">
+                <a href="#">
+                    <img class="img-responsive" src="http://placehold.it/300x400" alt="">
+                </a>
+            </div>
+            <div class="col-md-6 hvr-sweep-to-left">
+                <h3>Special Relativity Presentation</h3>
+                <h4>Based on Stanford EPGY's Special Relativity Course</h4>
+                <p>A semester capstone project for senior year independent study</p>
+            </div>
+            <a class="btn btn-primary hvr-sweep-to-left" href="files/SpecialRelativity.ppt">View Presentation</a>
+
+        </div>
 
         <hr>
 
         <!-- Project Five -->
+<!--
         <div class="row">
             <div class="col-md-5">
                 <a href="#">
@@ -126,11 +118,9 @@
                 <h3>Project Five</h3>
                 <h4>Subheading</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, quo, minima, inventore voluptatum saepe quos nostrum provident ex quisquam hic odio repellendus atque porro distinctio quae id laboriosam facilis dolorum.</p>
-<!--
-                <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
--->
             </div>
         </div>
+-->
 
         <footer class="footer-distributed" style="background-color: #f6f6f6; margin-top:20px ">
 			<div class="footer-left">
