--- a/item-2.html
+++ b/item-2.html
@@ -27,14 +27,13 @@
         <!-- Page Heading -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">School
-                    <small>Notable Projects and Assignments</small>
+                <h1 class="page-header">Interesting Papers and Books
                 </h1>
             </div>
         </div>
         <!-- /.row -->
 
-        <!-- Project One -->
+<!--
         <div class="row">
             <div class="col-md-5">
                 <a href="#">
@@ -45,16 +44,12 @@
                 <h3>Project One</h3>
                 <h4>Subheading</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
-<!--
-                <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
--->
+
             </div>
         </div>
-        <!-- /.row -->
 
         <hr>
 
-        <!-- Project Two -->
         <div class="row">
             <div class="col-md-5">
                 <a href="#">
@@ -65,16 +60,12 @@
                 <h3>Project Two</h3>
                 <h4>Subheading</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, odit velit cumque vero doloremque repellendus distinctio maiores rem expedita a nam vitae modi quidem similique ducimus! Velit, esse totam tempore.</p>
-<!--
-                <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
--->
+
             </div>
         </div>
-        <!-- /.row -->
 
         <hr>
 
-        <!-- Project Three -->
         <div class="row">
             <div class="col-md-5">
                 <a href="#">
@@ -85,16 +76,12 @@
                 <h3>Project Three</h3>
                 <h4>Subheading</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, temporibus, dolores, at, praesentium ut unde repudiandae voluptatum sit ab debitis suscipit fugiat natus velit excepturi amet commodi deleniti alias possimus!</p>
-<!--
-                <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
--->
+
             </div>
         </div>
-        <!-- /.row -->
 
         <hr>
 
-        <!-- Project Four -->
         <div class="row">
 
             <div class="col-md-5">
@@ -106,16 +93,11 @@
                 <h3>Project Four</h3>
                 <h4>Subheading</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, quidem, consectetur, officia rem officiis illum aliquam perspiciatis aspernatur quod modi hic nemo qui soluta aut eius fugit quam in suscipit?</p>
-<!--
-                <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
--->
             </div>
         </div>
-        <!-- /.row -->
 
         <hr>
 
-        <!-- Project Five -->
         <div class="row">
             <div class="col-md-5">
                 <a href="#">
@@ -126,11 +108,10 @@
                 <h3>Project Five</h3>
                 <h4>Subheading</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, quo, minima, inventore voluptatum saepe quos nostrum provident ex quisquam hic odio repellendus atque porro distinctio quae id laboriosam facilis dolorum.</p>
-<!--
-                <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
--->
+
             </div>
         </div>
+-->
 
         <footer class="footer-distributed" style="background-color: #f6f6f6; margin-top:20px ">
 			<div class="footer-left">
