--- a/item-1.html
+++ b/item-1.html
@@ -40,14 +40,13 @@
         <!-- Project One -->
         <div class="row">
             <div class="col-md-5">
-                <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/300x400" alt="">
+                <a href="">
+                    <img class="img-responsive" src="images/large/reinforcement.png" alt="">
                 </a>
             </div>
             <div class="col-md-6 hvr-sweep-to-left">
                 <h3>Reinforcement Learning: A Comparison of Value Iteration and Q-learning Algorithms in a Markov Decision Process</h3>
-                <h4>Two Different Reinforcement Learning Algorithms Applied to a Racing Game</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
+                <p>Abstract: In this paper we apply two different reinforcement learning algorithms to a Markov Decision Process (MDP). The first is value iteration (VI) with full knowledge of the environment’s stochastic state transition model, the second is Q-learning (Q), which does not require the model. We found that VI converges to a near-optimal solution more quickly, but given the right input functions and parameters, Q yields slightly better performance, especially when the reward function is particularly harsh. Both agents exploited interesting “loopholes” in the environment to achieve better scores. We recommend using VI to solve an MDP whenever enough information exists...</p>
                 
             </div>
             <a class="btn btn-primary hvr-sweep-to-left" href="files/reinforcement.pdf">Read the Paper</a>
@@ -59,8 +58,8 @@
         <!-- Project Two -->
         <div class="row">
             <div class="col-md-5">
-                <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/300x400" alt="">
+                <a href="">
+                    <img class="img-responsive" src="images/large/decisoin.png" alt="">
                 </a>
             </div>
             <div class="col-md-6 hvr-sweep-to-left">
@@ -76,14 +75,14 @@
 
         <div class="row">
             <div class="col-md-5">
-                <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/300x400" alt="">
+                <a href="">
+                    <img class="img-responsive" src="images/large/DT7.png" alt="">
                 </a>
             </div>
             <div class="col-md-6 hvr-sweep-to-left">
                 <h3>Respirage: A Respiratory Rate Measurement Device for Emergency Department Triage</h3>
                 <h4>My design team's final report summarizing our prototype's design and testing results.</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, temporibus, dolores, at, praesentium ut unde repudiandae voluptatum sit ab debitis suscipit fugiat natus velit excepturi amet commodi deleniti alias possimus!</p>
+                <p>We designed a portable, non-invasive vital sign measurement device for the fast-paced environment of emergency department triage.</p>
 <!--
                 <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
 -->
@@ -91,6 +90,7 @@
             <a class="btn btn-primary hvr-sweep-to-left" href="files/RRDT7.pdf">Read the Paper</a>
             <a class="btn btn-primary hvr-sweep-to-left" href="files/RRDT7presentation.pptx">View Presentation</a>
             <a class="btn btn-primary hvr-sweep-to-left" href="http://pages.jh.edu/~bpc/Medical%20Technology%20Undergraduate%20Track%20Finalists.html">Emsol Health</a>
+            <a class="btn btn-primary hvr-sweep-to-left" href="files/filing.pdf">View Disclosure</a>
         </div>
         <!-- /.row -->
 
@@ -100,8 +100,8 @@
         <div class="row">
 
             <div class="col-md-5">
-                <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/300x400" alt="">
+                <a href="https://commons.wikimedia.org/wiki/File:SIR_model_simulated_using_python.gif">
+                    <img class="img-responsive" src="https://upload.wikimedia.org/wikipedia/commons/a/a6/SIR_model_simulated_using_python.gif" alt="">
                 </a>
             </div>
             <div class="col-md-6 hvr-sweep-to-left">
